--- a/app/src/main/res/layout/item_recyclerview_top_month_comic_or_recommened.xml
+++ b/app/src/main/res/layout/item_recyclerview_top_month_comic_or_recommened.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/colorCardBackground"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
