--- a/app/src/main/res/layout/item_recyclerview_updated_comic.xml
+++ b/app/src/main/res/layout/item_recyclerview_updated_comic.xml
@@ -5,6 +5,9 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/colorBackground"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
