--- a/app/src/main/res/layout/fragment_search_comic.xml
+++ b/app/src/main/res/layout/fragment_search_comic.xml
@@ -39,10 +39,12 @@
         android:id="@+id/text_error_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/google_sans"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button_retry"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
