--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textttt"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="category" />
