[UPDATE] update category

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorRedAccent">#F71A08</color>
 
     <color name="colorBackground">#121212</color>
-    <color name="colorCardBackground">#585858</color>
+    <color name="colorCardBackground">#3A3A3A</color>
 
     <color name="colorTextOnPrimaryDark">#ffffff</color>
     <color name="colorTextOnPrimary">#ffffff</color>
