--- a/app/src/main/res/layout/fragment_comic_detail_end.xml
+++ b/app/src/main/res/layout/fragment_comic_detail_end.xml
@@ -5,9 +5,7 @@
     android:id="@+id/root_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     android:orientation="vertical"
-    app:layoutDescription="@xml/scene_fragment_comic_detail"
     app:showPaths="false">
 
 
@@ -15,7 +13,7 @@
         android:id="@+id/background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorBackground"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="@id/space"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,11 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="0dp"
         android:ellipsize="end"
         android:fontFamily="@font/google_sans"
         android:gravity="center|start"
-        android:maxLines="4"
+        android:maxLines="1"
         android:textAllCaps="true"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,15 +66,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/google_sans"
         android:gravity="center|start"
-        android:maxLines="3"
+        android:maxLines="2"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image_thumbnail"
         app:layout_constraintTop_toBottomOf="@id/text_title"
         tools:text="Last updated: 20:46 31/05/2019" />
+
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -110,15 +111,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/space"
-        app:visibilityMode="ignore"
-        tools:visibility="invisible" />
+        app:visibilityMode="ignore" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.45" />
+        app:layout_constraintGuide_percent="0.15" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -184,6 +184,5 @@
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="text_error_message,button_retry"
         app:visibilityMode="ignore" />
-
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
