--- a/app/src/main/res/xml/scene_fragment_comic_detail.xml
+++ b/app/src/main/res/xml/scene_fragment_comic_detail.xml
@@ -9,7 +9,9 @@
 
         <OnSwipe
             app:dragDirection="dragUp"
-            app:touchAnchorId="@id/swipe_refresh_layout"
+            app:touchAnchorId="@id/recycler_chapters"
+            app:onTouchUp="autoComplete"
+            app:moveWhenScrollAtTop="true"
             app:touchAnchorSide="top" />
     </Transition>
 
