--- a/app/src/main/res/layout/fragment_comic_detail.xml
+++ b/app/src/main/res/layout/fragment_comic_detail.xml
@@ -55,6 +55,7 @@
         android:gravity="center|start"
         android:maxLines="6"
         android:textAllCaps="true"
+        android:textColor="@color/colorTextOnBackground"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image_thumbnail"
@@ -64,13 +65,14 @@
     <TextView
         android:id="@+id/text_last_updated_status_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/google_sans"
-        android:gravity="center|start"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#D9FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/image_thumbnail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image_thumbnail"
         app:layout_constraintTop_toBottomOf="@id/text_title"
