--- a/app/src/main/res/layout/fragment_comic_detail_end.xml
+++ b/app/src/main/res/layout/fragment_comic_detail_end.xml
@@ -63,14 +63,14 @@
     <TextView
         android:id="@+id/text_last_updated_status_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/google_sans"
-        android:gravity="center|start"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#D9FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/image_thumbnail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image_thumbnail"
         app:layout_constraintTop_toBottomOf="@id/text_title"
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_percent="0.175" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
