--- a/app/src/main/res/layout/item_recyclerview_updated_comic.xml
+++ b/app/src/main/res/layout/item_recyclerview_updated_comic.xml
@@ -104,9 +104,11 @@
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textColor="#E6FFFFFF"
             android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_3"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/overlay"
             tools:text="Chapter 428" />
@@ -122,10 +124,12 @@
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textColor="#E6FFFFFF"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/text_chapter_name_1"
+            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_2"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_3"
             app:layout_constraintVertical_bias="0.0"
@@ -141,10 +145,12 @@
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textColor="#E6FFFFFF"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/text_chapter_time_1"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_chapter_name_2"
             app:layout_constraintVertical_bias="0.0"
@@ -153,53 +159,59 @@
 
         <TextView
             android:id="@+id/text_chapter_time_3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewEnd"
             android:textColor="#BFFFFFFF"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_3"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_3"
             tools:text="38 phút trước" />
 
         <TextView
             android:id="@+id/text_chapter_time_2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewEnd"
             android:textColor="#BFFFFFFF"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_2"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_2"
             tools:text="1 giờ trước" />
 
         <TextView
             android:id="@+id/text_chapter_time_1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
-            android:textAlignment="center"
+            android:textAlignment="viewEnd"
             android:textColor="#BFFFFFFF"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBaseline_toBaselineOf="@+id/text_chapter_name_1"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_chapter_name_1"
             tools:text="1 giờ trước" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
