--- a/app/src/main/res/layout/fragment_chapter_detail.xml
+++ b/app/src/main/res/layout/fragment_chapter_detail.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorCardBackground"
         android:padding="0dp"
+        app:cardBackgroundColor="@color/colorBackground"
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
@@ -31,9 +31,9 @@
                 android:layout_height="0dp"
                 android:adjustViewBounds="false"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:padding="12dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:padding="12dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
@@ -47,9 +47,9 @@
                 android:layout_height="0dp"
                 android:adjustViewBounds="false"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:padding="12dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:padding="12dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
@@ -63,7 +63,6 @@
                 android:id="@+id/switch_orientation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button_next"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +71,6 @@
                 android:id="@+id/spinner_chapters"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/switch_orientation"
                 app:layout_constraintStart_toEndOf="@+id/button_prev"
@@ -89,6 +86,7 @@
         android:id="@+id/view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/colorCardBackground"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +147,7 @@
         android:textSize="18sp"
         app:backgroundTint="@color/colorBackground"
         app:cornerRadius="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
