--- a/app/src/main/res/layout/item_recycler_chapter.xml
+++ b/app/src/main/res/layout/item_recycler_chapter.xml
@@ -83,7 +83,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:padding="4dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/image_eye"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/image_eye"
