--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,11 @@
             android:icon="@drawable/ic_dashboard_white_24dp"
             android:title="All categories" />
 
+        <item
+            android:id="@+id/downloadedComicsFragment"
+            android:icon="@drawable/ic_file_download_white_24dp"
+            android:title="Downloaded comics" />
+
     </group>
 
     <item android:title="Communicate">
