--- a/app/src/main/res/drawable/ic_done_accent_24dp.xml
+++ b/app/src/main/res/drawable/ic_done_accent_24dp.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24.0">
     <path
         android:fillColor="@color/colorAccent"
-        android:pathData="M19,9h-4V3H9v6H5l7,7 7,-7zM5,18v2h14v-2H5z" />
+        android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z" />
 </vector>
