--- a/app/src/main/res/layout/item_recycler_chapter.xml
+++ b/app/src/main/res/layout/item_recycler_chapter.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/materialCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -35,42 +36,23 @@
             android:id="@+id/text_chapter_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/google_sans"
             android:lines="1"
             android:maxLines="1"
             android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@id/image_download"
             app:layout_constraintEnd_toStartOf="@+id/text_chapter_view"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_chapter_title"
-            tools:text="5 phút trước" />
-
-        <TextView
-            android:id="@+id/text_chapter_downloading_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/google_sans"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/image_download"
-            app:layout_constraintEnd_toEndOf="@id/image_download"
             app:layout_constraintTop_toTopOf="@id/image_download"
-            tools:text="20%"
-            tools:visibility="visible" />
+            tools:layout_editor_absoluteY="29dp"
+            tools:text="5 phút trước" />
 
         <TextView
             android:id="@+id/text_chapter_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/google_sans"
@@ -78,10 +60,11 @@
             android:maxLines="1"
             android:textAlignment="textEnd"
             android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@+id/text_chapter_time"
             app:layout_constraintEnd_toStartOf="@+id/image_eye"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/text_chapter_time"
-            app:layout_constraintTop_toBottomOf="@+id/text_chapter_title"
+            app:layout_constraintTop_toTopOf="@+id/text_chapter_time"
             tools:text="1.055" />
 
         <ImageView
@@ -98,8 +81,8 @@
 
         <ImageView
             android:id="@+id/image_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
             android:layout_marginEnd="8dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
@@ -115,7 +98,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="left"
-            app:constraint_referenced_ids="image_download,text_chapter_downloading_progress" />
+            app:constraint_referenced_ids="image_download,circular_progress" />
+
+        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
+            android:id="@+id/circular_progress"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:visibility="invisible"
+            app:direction="clockwise"
+            app:drawDot="false"
+            app:enableProgressAnimation="true"
+            app:fillBackground="false"
+            app:layout_constraintBottom_toBottomOf="@id/image_download"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_chapter_title"
+            app:progressBackgroundColor="@color/colorDivider"
+            app:progressBackgroundStrokeWidth="2dp"
+            app:progressCap="round"
+            app:progressColor="?attr/colorAccent"
+            app:progressStrokeWidth="3dp"
+            app:startAngle="270"
+            app:textColor="@android:color/white"
+            app:textSize="14sp"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
