update(ComicDetail): update chapter item layo

--- a/app/src/main/res/layout/item_recycler_chapter.xml
+++ b/app/src/main/res/layout/item_recycler_chapter.xml
@@ -115,11 +115,11 @@
             app:layout_constraintBottom_toBottomOf="@id/image_download"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_chapter_title"
-            app:progressBackgroundColor="@color/colorDivider"
-            app:progressBackgroundStrokeWidth="2dp"
-            app:progressCap="round"
+            app:progressBackgroundColor="@color/colorTextOnBackground"
+            app:progressBackgroundStrokeWidth="1.5dp"
+            app:progressCap="butt"
             app:progressColor="?attr/colorAccent"
-            app:progressStrokeWidth="3dp"
+            app:progressStrokeWidth="2.5dp"
             app:startAngle="270"
             app:textColor="@android:color/white"
             app:textSize="14sp"
